RESOLVED FIXED69909
REGRESSION(r94836): An assertion fails in HTMLFormControlElement::isValidFormControlElement when HTMLInputElement::setValue() is called while the element is focused.
https://bugs.webkit.org/show_bug.cgi?id=69909
Summary REGRESSION(r94836): An assertion fails in HTMLFormControlElement::isValidForm...
Kent Tamura
Reported 2011-10-12 00:37:10 PDT
REGRESSION(r94836): An assertion fails in HTMLFormControlElement::isValidFormControlElement when HTMLInputElement::setValue() is called while the element is focused. http://code.google.com/p/chromium/issues/detail?id=99622
Attachments
Patch (4.22 KB, patch)
2011-10-12 00:46 PDT, Kent Tamura
no flags
Kent Tamura
Comment 1 2011-10-12 00:46:20 PDT
Ryosuke Niwa
Comment 2 2011-10-12 00:55:18 PDT
Thanks for the fix!
Kent Tamura
Comment 3 2011-10-12 01:02:05 PDT
Comment on attachment 110649 [details] Patch Thank you for the quick review!
WebKit Review Bot
Comment 4 2011-10-12 02:06:13 PDT
Comment on attachment 110649 [details] Patch Clearing flags on attachment: 110649 Committed r97244: <http://trac.webkit.org/changeset/97244>
WebKit Review Bot
Comment 5 2011-10-12 02:06:17 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.