REGRESSION(r94836): An assertion fails in HTMLFormControlElement::isValidFormControlElement when HTMLInputElement::setValue() is called while the element is focused. https://bugs.webkit.org/show_bug.cgi?id=69909

Reviewed by Ryosuke Niwa.

Source/WebCore:

setNeedsValidityCheck() should be called after the value update
and before any style recalculation. r94836 moved
setSelectionRange() call, and it recalculates the element style.

* html/HTMLInputElement.cpp:
(WebCore::HTMLInputElement::setValue): Move setNeedsValidityCheck() to setValueInternal().
(WebCore::HTMLInputElement::setValueInternal): Move setNeedsValidityCheck() from setValue().

LayoutTests:

* fast/forms/input-live-pseudo-selectors-expected.txt:
* fast/forms/resources/input-live-pseudo-selectors.js: Add a testcase for the bug.


Canonical link: https://commits.webkit.org/85976@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@97244 268f45cc-cd09-0410-ab3c-d52691b4dbfc